# telecom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
config/: toml_config_manager.py
config/local/: .env.local  .secrets.toml  Dockerfile  config.toml  docker-compose.yml  export.toml
scripts/dishka/: plot_dependencies_data.py
scripts/makefile/: docker_prune.sh  pycache_del.sh
src/app/: run.py
src/app/application/common/exceptions/: query.py
src/app/application/common/ports/: transaction_manager.py
src/app/domain/value_objects/: base.py  booking_id.py  room_id.py  user_id.py
src/app/infrastructure/adapters/: main_transaction_manager_sqla.py  types.py
src/app/infrastructure/booking/: model.py
src/app/infrastructure/exceptions/: gateway.py
src/app/infrastructure/persistence_sqla/: config.py  registry.py
src/app/infrastructure/persistence_sqla/alembic/: env.py
src/app/infrastructure/persistence_sqla/alembic/versions/: 2025_06_12_1602-ca9bd5043e16_add_tables_to_db.py
src/app/infrastructure/persistence_sqla/mappings/: all.py  booking.py  rooms.py
src/app/infrastructure/rooms/: model.py
src/app/presentation/http/: exception_handlers.py
src/app/presentation/http/auth/: asgi_middleware.py  constants.py  cookie_params.py
src/app/presentation/http/controllers/: api_v1_router.py  root_router.py
src/app/presentation/http/controllers/general/: healthcheck.py  router.py
src/app/setup/: app_factory.py
src/app/setup/config/: constants.py  logs.py  settings.py
src/app/setup/ioc/: registry.py
src/app/setup/ioc/di_providers/: application.py  settings.py
