[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "telecom"
version = "0.1"
description = "FastAPI test task"
readme = "README.md"
license = "MIT"
authors = [
    { name = "To Kirill", email = "to.kirill2@gmail.com" },
]
requires-python = ">=3.12.0"
dependencies = [
    "alembic>=1.16.1",
    "alembic-postgresql-enum>=1.7.0",
    "bcrypt>=4.3.0",
    "dishka>=1.6.0",
    "fastapi>=0.115.12",
    "orjson>=3.10.18",
    "psycopg[binary]>=3.2.9",
    "pydantic[email]>=2.11.4",
    "pyjwt[crypto]>=2.10.1",
    "rtoml>=0.12.0",
    "sqlalchemy[mypy]>=2.0.41",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.2",
    "uvloop>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
test = [
    "coverage>=7.8.1",
    "line-profiler>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0"
]

[tool.ruff]
line-length = 88
preview = true  # experimental

[tool.ruff.lint]
select = [
    "ERA001", # commented-out-code    https://docs.astral.sh/ruff/rules/#eradicate-era
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "S", # flake8-bandit              https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "B", # flake8-bugbear             https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "A", # flake8-builtins            https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    #    "COM", # flake8-commas            https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # Incompatible with ruff formatter, but can be useful (uncomment once, then review changes)
    # See: https://github.com/astral-sh/ruff/issues/9216
    "C4", # flake8-comprehensions     https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "DTZ", # flake8-datetimez         https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "LOG", # flake8-logging           https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "T20", # flake8-print             https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "PT", # flake8-pytest-style       https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "RSE", #flake8-raise (RSE)        https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RET", #flake8-return (RET)       https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "SLF", #flake8-self (SLF)         https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SIM", # flake8-simplify          https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLOT", # flake8-slots            https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "TID", # flake8-tidy-imports      https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TCH", # flake8-type-checking     https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "ARG", # flake8-unused-arguments  https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "PTH", # flake8-use-pathlib       https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "Q", # flake8-quotes              https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "FLY", # flynt                    https://docs.astral.sh/ruff/rules/#flynt-fly
    "I", # isort                      https://docs.astral.sh/ruff/rules/#isort-i
    "C90", # mccabe                   https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N", # pep8-naming                https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PERF", # Perflint                https://docs.astral.sh/ruff/rules/#perflint-perf
    "E", # pycodestyle-error          https://docs.astral.sh/ruff/rules/#error-e
    "W", # pycodestyle-warning        https://docs.astral.sh/ruff/rules/#warning-w
    "F", # pyflakes                   https://docs.astral.sh/ruff/rules/#pyflakes-f
    "PL", # pylint                    https://docs.astral.sh/ruff/rules/#pylint-pl
    "UP", # pyupgrade                 https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF", # Ruff-specific rules      https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = [
    "N818", # error-suffix-on-exception-name
    "PLR0913", # too-many-arguments
    "PLR0917", # too-many-positional-arguments
    "PLR6301", # no-self-use
    "PTH123", # builtin-open
    "TC001", # typing-only-first-party-import
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
    "TC006", # runtime-cast-value
    "UP015", # redundant-open-modes
]

[tool.ruff.lint.per-file-ignores]
"src/app/infrastructure/persistence_sqla/alembic/**" = ["ALL", ]
"tests/**" = [
    "PLR2004", # magic-value-comparison
    "PT011", # pytest-raises-too-broad
    "S101", # assert
    "S105", # hardcoded-password-string
    "SLF001", # private-member-access
    "UP012", # unnecessary-encode-utf8
]
"src/app/domain/value_objects/base.py" = ["B024", ]                          # abstract-base-class-without-abstract-method
"src/app/infrastructure/adapters/password_hasher_bcrypt.py" = ["E501"]       # line-too-long
"src/app/infrastructure/constants.py" = ["S105"]                             # hardcoded-password-string
"src/app/presentation/http/auth/constants.py" = ["S105"]                     # hardcoded-password-string
"src/app/presentation/http/exception_handlers.py" = ["PLR2004", ]            # magic-value-comparison
"src/app/setup/config/settings.py" = ["PLR2004", ]                           # magic-value-comparison
"src/app/setup/ioc/di_providers/infrastructure.py" = ["E501", ]              # line-too-long
"scripts/dishka/plot_dependencies_data.py" = ["T201", ]                      # print

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.mypy]
files = [
    "config",
    "scripts",
    "src",
    "tests",
]
exclude = "^.*alembic.*$"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
disallow_untyped_defs = false
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[tool.pytest.ini_options]
testpaths = ["tests", ]
markers = ["slow", ]
addopts = "-m 'not slow'"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src", ]
omit = [
    "**/__init__.py",
    "**/alembic/**",
]
concurrency = [
    "multiprocessing",
    "thread",
]
parallel = true
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "pass",
    '\.\.\.',
    "from .*",
    "import .*",
    'logging\..*',
    'log\..*',
]